--- a/meta/11-12.md
+++ b/meta/11-12.md
@@ -9,7 +9,7 @@ indicator_sort_order: 11-12-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: Anzahl der lärmbelasteten Flächen 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -17,12 +17,12 @@ data_start_values:  # initialize the field to be shown
    value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Land Bayern 
+national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: <a href="https://www.ingolstadt.de/laermaktionsplan">Entwurf des Lärmaktionsplanes der Stadt Ingolstadt</a>  # data source  
+source_earliest_available_1: 2019
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
@@ -31,3 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Lärmbelastete Fläche ist kein technisch oder rechtlich abgesicherter Ausdruck. Betrachtet man Lärmbrennpunkte im Sinne des § 47 d Bundes-Immissionsschutzgesetz als Lärmbelastete Flächen, dann wären in Ingolstadt 90 Stück vorhanden. Die Tendenz ist gleichbleibend.
