--- a/meta/11-4.md
+++ b/meta/11-4.md
@@ -6,10 +6,10 @@ graph_title: global_indicators.11-4-title
 indicator_sort_order: 11-04-01
  
 # 2. Grafikart auswaehlen: 
-data_non_statistical: false  # set to 'false' for chart/graph visualization 
+data_non_statistical: true  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -17,17 +17,18 @@ data_start_values:  # initialize the field to be shown
    value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Land Bayern 
+national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
+SOURCE_TYPE: <a href="https://www.in-kb.de/starkregenkarte">Starkregenkarte INKB</a>  # data source  
+source_earliest_available_1: 2023
 source_periodicity_1: 
 
 language: de   
 published: true 
-reporting_status: complete
+reporting_status: inprogress
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Die Starkregengefahrenkarte zeigt potenzielle Gefahrenbereiche aufgrund von Starkregenereignissen an. Sie ist Teil des Sturzflutrisikomanagementes, welches Ingolstadt als eine der ersten bayerischen Großstädte umgesetzt hat. Die Karte dient als Grundlage für Vorsorgemaßnahmen im privaten und kommunalen Bereich. Mit den angezeigten Überflutungsflächen kann man gezielt Schutzmaßnahmen umsetzen, um Schäden durch Starkregen zu vermeiden. Die Karte basiert auf Modellberechnungen. Dazu wurden m gesamten Stadtgebiet die Gegebenheiten vor Ort aufgenommen und analysiert. Danach wurden Modellberechnungen durchgeführt. Anhand dieser Daten ist es möglich, die Überflutungsflächen bei unterschiedlich intensiven Starkregenfällen zu berechnen und in einer Karte darzustellen. <br>
