--- a/meta/11-8.md
+++ b/meta/11-8.md
@@ -21,8 +21,8 @@ national_geographical_coverage: Ingolstadt
 computation_definitions: 
 
 SOURCE_TYPE: Amt für Statistik und Stadtforschung  # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+source_earliest_available_1: 2019
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
@@ -31,4 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anteil Heizenergien oder Fernwärme in fertiggestellten Wohngebäuden in Prozent.
+Anteil Heizenergien oder Fernwärme in fertiggestellten Wohngebäuden in Prozent. <br>
