--- a/meta/11-15.md
+++ b/meta/11-15.md
@@ -31,4 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Öffentliche Grünflächen in der Einheit km2 je 1.000 EW in allen Stadtvierteln der Stadt Ingolstadt. Unter dem Begriff kommunale Grünflächen versteht man alle öffentlichen Freiflächen, die gärtnerisch gepflegt werden und die die Stadt der Allgemeinheit zugänglich gemacht hat. Unter diese Kategorie fallen nicht nur die großen Parkanlagen wie das Glacis, der Luitpoldpark, der Fort Haslang Park oder der Park Mailinger Aue, sondern auch die vielen kleineren Grünzüge wie der Güßgraben in Etting oder der Grünzug Märzenbecherstraße im Stadtteil Ringsee. <br>
+Öffentliche Grünflächen in der Einheit km2 je 1.000 EW in allen Stadtvierteln der Stadt Ingolstadt. Unter dem Begriff kommunale Grünflächen versteht man alle öffentlichen Freiflächen, die gärtnerisch gepflegt werden und die die Stadt der Allgemeinheit zugänglich gemacht hat. Unter diese Kategorie fallen nicht nur die großen Parkanlagen wie das Glacis, der Luitpoldpark, der Fort Haslang Park oder der Park Mailinger Aue, sondern auch die vielen kleineren Grünzüge wie der Güßgraben in Etting oder der Grünzug Märzenbecherstraße im Stadtteil Ringsee. Mehr Infos auf der Webseite des <a href="https://www.ingolstadt.de/Rathaus/Stadtgarten/Gr%C3%BCnplanung-Pflege/">Gartenamts Ingolstadt</a>.
