--- a/meta/11-18.md
+++ b/meta/11-18.md
@@ -9,7 +9,7 @@ indicator_sort_order: 11-18-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: Wohnfläche in m² je EW
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -17,12 +17,12 @@ data_start_values:  # initialize the field to be shown
    value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Land Bayern 
+national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: <a href="https://www.statistikdaten.bayern.de/genesis//online?operation=table&code=31231-003z&bypass=true&levelindex=1&levelid=1680780794247#abreadcrumb"> Bayerisches Landesamt für Statistik</a>  # data source  
+source_earliest_available_1: 2019
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
@@ -31,3 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Die durchschnittliche Wohnfläche pro Person hat bis 2022 immer weiter zugenommen – von 34 m² im Jahr 1990 auf gut 45 m² im Jahr 2014. Allerdings ist dieser Wert in den letzten Jahren langsamer gestiegen. In kleineren Haushalten erhöht sich in der Regel die durchschnittliche Wohnfläche pro Person. Dieser Trend ergibt sich also u.a. aus der steigenden Zahl von Einpersonenhaushalten, aber z.B. auch dann, wenn erwachsene Kinder aus dem Haushalt der Eltern ausziehen. <br>
