--- a/meta/12-2.md
+++ b/meta/12-2.md
@@ -9,7 +9,7 @@ indicator_sort_order: 12-02-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: Anzahl nachhaltige KiTas
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -17,12 +17,12 @@ data_start_values:  # initialize the field to be shown
    value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Land Bayern 
+national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: Amt für Kinderbetreuung und vorschulische Bildung  # data source  
+source_earliest_available_1: 2019
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
@@ -31,3 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Nur städtische KiTas bei Zertifizierung berücksichtigt (Mx). Aktuell ist keine städtische Kita als sogenannte FairTrade-Kita zertifiziert. Dennoch haben alle Kitas die Nachhaltigkeit im Blick und weisen mindestens 3 Faktoren, die für eine Faire Kita wichtig sind, z.B. nachhaltiges und inklusives Spielzeug, kein Einmalgeschirr, Bezug von Fair Trade zertifizierten Produkten etc., auf. Es wurde 2022 der Vorstoß unternommen, die Zertifizierungen umzusetzen. Diese ist für 2023 vorgesehen. <br>
