--- a/meta/12-3.md
+++ b/meta/12-3.md
@@ -21,8 +21,8 @@ national_geographical_coverage: Ingolstadt
 computation_definitions: 
 
 SOURCE_TYPE: <a href="https://www.fairtrade-schools.de/kampagne/fairtrade-schools-karte">Fairtrade-Schools Kampagne</a>  # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+source_earliest_available_1: 2019
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
