--- a/meta/12-4.md
+++ b/meta/12-4.md
@@ -9,7 +9,7 @@ indicator_sort_order: 12-04-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: Anzahl der Zertifizierungen
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -17,12 +17,12 @@ data_start_values:  # initialize the field to be shown
    value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Land Bayern 
+national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: <a href="www.ingolstadt.de/fairtrade">Fairtrade-Town-Ingolstadt</a>  # data source  
+source_earliest_available_1: 2014
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
@@ -31,3 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Die Stadt Ingolstadt ist seit 2014 als Fairtrade-Town zertifiziert. Seitdem hat die Stadt 4 weitere Zertifizierungsprozesse durchlaufen. Eine Zertifizierung wird alle 2 Jahre durchgeführt. <br>
