--- a/meta/14-1.md
+++ b/meta/14-1.md
@@ -9,7 +9,7 @@ indicator_sort_order: 14-01-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: Fließwasserqualität in Prozent
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -17,12 +17,12 @@ data_start_values:  # initialize the field to be shown
    value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Land Bayern 
+national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: <a href="https://www.wwa-in.bayern.de/fluesse_seen/umsetzungskonzepte_wrrl/index.htm">Wasserwirtschaftsamt Ingolstadt</a>  # data source  
+source_earliest_available_1: 2019
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
@@ -31,3 +31,5 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Im Rahmen der Umsetzung der EU-WRRL-Richtlinie wird im Bereich der Stadt Ingolstadt für folgende Gewässer der Zustand bzw. das ökologische Potential ermittelt:
+Donau, Schutter, Sandrach, Mailinger Bach. Das gute ökologische Potential hat bisher nur die Donau erreicht – daher beträgt die Anzahl der Fließgewässer die mindestens mit "gut" beurteilt wurden 25 Prozent. Die Bewirtschaftungspläne werden alle 6 Jahre fortgeschrieben, d.h. dass sich von 2019 bis 2021 keine Veränderungen ergeben haben. <br> 
