--- a/meta/14-2.md
+++ b/meta/14-2.md
@@ -31,12 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Eine Einstufung nach EU-Badegewässerrichtlinien wird unter Durchführung einer speziellen Konformitätsberechnung vorgenommen. Hierzu werden alle Messwerte der letzten vier Jahre herangezogen. <br>
-- mangelhafte Badegewässerqualität <br>
-* Ausreichende Badegewässerqualität <br>
-** Gute Badegewässerqualität <br>
-*** Ausgezeichnete Badegewässerqualität <br>
-<br>
-Die Einstufung der Badegewässer erfolgt aufgrund der durchgeführten Bewertung nach dem Ende jeder Badesaison. Sie beschreibt den qualitativen Zustand der Badegewässer anhand der mikrobiologischen Parameter Escherichia coli und Intestinale Enterokokken über den Zeitraum der letzten 4 Jahre in den Kategorien “Ausgezeichnet”, “Gut”, “Ausreichend”, “Mangelhaft”.
-<br>
-Genaue Daten sind hier zu finden <a href="https://eur-lex.europa.eu/legal-content/DE/TXT/?qid=1534167377521&uri=CELEX:02006L0007-20140101">Gewässerqualität</a>
+Eine Einstufung nach EU-Badegewässerrichtlinien wird unter Durchführung einer speziellen Konformitätsberechnung vorgenommen. Hierzu werden alle Messwerte der letzten vier Jahre herangezogen. Die Einstufung der Badegewässer erfolgt aufgrund der durchgeführten Bewertung nach dem Ende jeder Badesaison. Sie beschreibt den qualitativen Zustand der Badegewässer anhand der mikrobiologischen Parameter Escherichia coli und Intestinale Enterokokken über den Zeitraum der letzten 4 Jahre in den Kategorien “Ausgezeichnet”, “Gut”, “Ausreichend”, “Mangelhaft”. Genaue Daten sind hier zu finden <a href="https://eur-lex.europa.eu/legal-content/DE/TXT/?qid=1534167377521&uri=CELEX:02006L0007-20140101">Gewässerqualität</a>
