--- a/meta/15-2.md
+++ b/meta/15-2.md
@@ -17,7 +17,7 @@ data_start_values:  # initialize the field to be shown
    value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Land Bayern 
+national_geographical_coverage: Ingolstadt
 computation_definitions: 
 
 SOURCE_TYPE:   # data source  
@@ -26,7 +26,7 @@ source_periodicity_1:
 
 language: de   
 published: true 
-reporting_status: complete
+reporting_status: inprogress
  
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
