--- a/meta/16-2.md
+++ b/meta/16-2.md
@@ -7,9 +7,9 @@ indicator_sort_order: 16-02-01
  
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
-graph_type: line  # chart types include: bar, line, binary 
+graph_type: bar  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: Bürger/-innenbeteiligungsverfahren pro 1.000 EW
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -17,12 +17,12 @@ data_start_values:  # initialize the field to be shown
    value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Land Bayern 
+national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: <a href="https://www.ingolstadt.de/Home/B%C3%BCrgerbeteiligung-in-Ingolstadt.php?object=tx,2789.5&ModID=7&FID=2789.24.1&NavID=2789.411">Bürgerbeteiligung Ingolstadt</a>   # data source  
+source_earliest_available_1: 2019
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
@@ -31,3 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Die Stadt Ingolstadt verfügt über ein breites Beteiligungsangebot für Bürger/-innen, die das politische und gesellschaftliche Geschehen der Stadt aktiv mitgestalten möchten. Informationen über das gesamte Angebot als <a href="https://www.ingolstadt.de/output/download.php?fid=3052.1656.1.PDF">PDF</a>.
