--- a/meta/16-6.md
+++ b/meta/16-6.md
@@ -9,7 +9,7 @@ indicator_sort_order: 16-06-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Prozent 
+computation_units: Straftaten je 1.000 EW
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -17,12 +17,12 @@ data_start_values:  # initialize the field to be shown
    value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Land Bayern 
+national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
-source_periodicity_1: 
+SOURCE_TYPE: <a href="https://www.polizei.bayern.de/kriminalitaet/statistik/index.html">Polzei Oberbayern Nord</a>  # data source  
+source_earliest_available_1: 2019
+source_periodicity_1: Jährlich
 
 language: de   
 published: true 
@@ -31,3 +31,4 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Polizeilich gemeldete Straftaten je 1.000 EW in Ingolstadt. In der Polizeilichen Kriminalstatistik werden die von den bayerischen Polizeidienststellen bearbeiteten rechtswidrigen (Straf-)Taten einschließlich der mit Strafe bedrohten Versuche sowie die ermittelten Tatverdächtigen erfaßt, sofern die Taten im Freistaat Bayern begangen wurden. Einbezogen sind auch die von den Zollbehörden gemeldeten Rauschgiftdelikte. Nicht enthalten sind (echte) Staatsschutzdelikte und Verkehrsdelikte. Die Erfassung erfolgt nach genau bestimmten "Regeln für die Fallerfassung" und orientiert sich an einem unter teils strafrechtlichen, teils kriminologischen Aspekten aufgebauten "Straftatenkatalog", der seit 1971 mehrfach ergänzt und erweitert worden ist.
