--- a/meta/15-5.md
+++ b/meta/15-5.md
@@ -9,7 +9,7 @@ indicator_sort_order: 15-05-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Waldflächenbilanz
+computation_units: Waldflächenbilanz in Hektar
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -20,8 +20,8 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt
 computation_definitions: 
 
-SOURCE_TYPE:   # data source  
-source_earliest_available_1: 
+SOURCE_TYPE: Amt für Ernährung, Landwirtschaft und Forsten Ingolstadt- Pfaffenhofen a. d. Ilm  # data source  
+source_earliest_available_1: 2015
 source_periodicity_1: 
 
 language: de   
@@ -31,3 +31,4 @@ reporting_status: inprogress
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+Die Waldflächenbilanz ergibt sich aus den Ab- und Zugängen bewaldeter Flächen. Die Angaben beziehen sich auf die gesamte Region 10. Eine Bilanz nur für das Stadtgebiet Ingolstadt wird derzeit nicht erstellt. <br>  
